@@ -1,3 +1,7 @@
+2021-04-14  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>
+
+	* lib/dwarf.exp (_location): Recognize DW_OP_fbreg as an op.
+
 2021-04-12  Markus Metzger  <markus.t.metzger@intel.com>
 
 	* gdb.btrace/reconnect.exp: Relax expected stepi output.
